>Notification count design bugg

--- a/_1.Presentation/Views/Shared/_AppLayout.cshtml
+++ b/_1.Presentation/Views/Shared/_AppLayout.cshtml
@@ -580,8 +580,10 @@
                 iconCountEl.style.display = "none";
                 cardCountEl.style.display = "none";
             } else {
-                iconCountEl.style.display = "inline-block";
-                cardCountEl.style.display = "inline-block";
+                iconCountEl.style.display = "flex";
+
+                cardCountEl.style.display = "flex";
+
                 iconCountEl.textContent = count;
                 cardCountEl.textContent = count;
             }
